--- a/api/package.json
+++ b/api/package.json
@@ -12,6 +12,7 @@
     "@nomiclabs/hardhat-ethers": "^2.2.3",
     "@typegoose/typegoose": "^12.0.0",
     "@types/bcrypt": "^5.0.2",
+    "@types/cors": "^2.8.17",
     "@types/jsonwebtoken": "^9.0.5",
     "@types/multer": "^1.4.11",
     "@types/nodemailer": "^6.4.14",
@@ -39,6 +40,7 @@
     "axios": "^1.6.8",
     "bcrypt": "^5.1.1",
     "cohere-ai": "^7.7.5",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "firebase-admin": "^12.0.0",
